<resources>
    <string name="app_name">Agenda</string>
    <string name="buscar_personal">Buscar Personal</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="email">Email</string>
    <string name="telefono">Telefono</string>
    <string name="edad">Edad</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>
    <string name="borar_personal">¿Borrar Personal?</string>
    <string name="yes">Si, borrar</string>
    <string name="cancel">Cancelar</string>

</resources>